<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rlyTitle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/background_title">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:src="@drawable/btn_back_selector" />

        <TextView
            android:id="@+id/tvCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/test"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlyContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rlyTitle"
        android:background="@color/background_content">

        <RelativeLayout
            android:id="@+id/rlyNormalSignin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="아이디(이메일)을 입력해주세요."
                android:textColorHint="@color/text_hint" />

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@+id/edtEmail"
                android:hint="비밀번호를 입력해주세요."
                android:textColorHint="@color/text_hint" />

            <RelativeLayout
                android:id="@+id/rlyAutoSignin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edtPassword">

                <CheckBox
                    android:id="@+id/cbxAutoSignin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:checked="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/cbxAutoSignin"
                    android:layout_centerVertical="true"
                    android:text="@string/auto_signin"
                    android:textColor="@color/text_black" />

                <TextView
                    android:id="@+id/tvForget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:layout_centerVertical="true"
                    android:text="@string/forget_account"
                    android:textColor="@color/text_black"/>
            </RelativeLayout>

            <Button
                android:id="@+id/btnSignin"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/rlyAutoSignin"
                android:text="@string/btn_signin"/>

            <TextView
                android:id="@+id/tvSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnSignin"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/go_to_signup_from_signin"
                android:textColor="@color/text_black"/>
        </RelativeLayout>

        <GridLayout
            android:id="@+id/glySns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rlyNormalSignin"
            android:layout_marginTop="80dp"
            android:columnCount="2"
            android:rowCount="2"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnKakao"
                android:layout_columnWeight="0.5"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:text="카카오"/>
            <Button
                android:id="@+id/btnNaver"
                android:layout_columnWeight="0.5"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:text="네이버"/>
            <Button
                android:id="@+id/btnFacebook"
                android:layout_columnWeight="0.5"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:text="페이스북"/>
            <Button
                android:id="@+id/btnGoogle"
                android:layout_columnWeight="0.5"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:text="구글"/>
        </GridLayout>

        <TextView
            android:id="@+id/tvAgreement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/glySns"
            android:text="@string/test"
            android:textColor="@color/text_gray"/>
    </RelativeLayout>
</RelativeLayout>